# adventofcode

./: Cargo.toml  README.md  go.work
.github/workflows/: test.yml
2015/: README.md  go.mod
2015/day1/: main.go
2015/day10/: main.go
2015/day11/: main.go
2015/day12/: main.go
2015/day13/: main.go
2015/day14/: main.go
2015/day15/: main.go
2015/day16/: main.go
2015/day17/: main.go
2015/day18/: main.go
2015/day19/: main.go
2015/day2/: main.go
2015/day3/: main.go
2015/day4/: main.go
2015/day5/: main.go
2015/day6/: main.go
2015/day7/: main.go
2015/day8/: main.go
2015/day9/: main.go
2016/: README.md  go.mod
2016/day0/: main.go
2016/day1/: main.go
2016/day2/: main.go
2016/day3/: main.go
2016/day4/: main.go
2016/day5/: main.go
2016/day6/: main.go
2016/day7/: main.go
2016/day8/: main.go
2016/day9/: main.go
2022/: Cargo.toml  README.md
2022/day0/: Cargo.toml
2022/day12/: Cargo.toml
2022/day3/: Cargo.toml
2022/day8/: Cargo.toml
2023/: Cargo.toml
2023/day0/: Cargo.toml
2023/day10/: Cargo.toml
2023/day5/: Cargo.toml
2023/day6/: Cargo.toml
2023/day7/: Cargo.toml
2023/day8/: Cargo.toml
2023/day9/: Cargo.toml
2023/src/: main.rs
day0/src/: main.rs
day4/src/: main.rs
day9/src/: main.rs
src/: main.rs
src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  mod.rs
src/year2016/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  (+1 more)
(+48 files in other folders)
