[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
inquire = "0.7.5"
itertools = "0.13.0"
md5 = "0.7.0"
rayon = "1.10.0"
regex = "1.11.1"
serde_json = "1.0.133"
